src/test/deca/context/valid/print_liste.deca
// Description :
// test de l'affichage d'une liste d'expressions
//
// Résultats :
// ok

{
  println(5, 5.0, 3, 12.0);
}
